Fixed some Layout issues and red error messages in profile pages

--- a/css/stylesB.css
+++ b/css/stylesB.css
@@ -1,3 +1,6 @@
+html{
+    font-size: 100%;
+}
 
 body {
     background: url("../images/background-image.png") no-repeat center center fixed;
@@ -6,7 +9,7 @@ body {
     background-size: cover;
   -o-background-size: cover;
     font-family: "Roboto";
-  
+
 }
 .navtitle{
     font-family: "Roboto";
@@ -101,4 +104,7 @@ fa-address-card{
 .fa-eye{
     color: aquamarine;
     
+}
+.help-block{
+    color: red;
 }
